welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:4: error: value =< is not a member of Int
		if ( 60 =< temp && temp =< 100)
                        ^squirrelPlay:10: error: value =< is not a member of Int
	else if ( 60 =< temp && temp =< 90)
                     ^